update to header component

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="logo" href="./public/logo-modified.png" />
+    <link rel="icon" type="logo" href="/logo-modified.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Furnish Plus</title>
   </head>
